# deals-widget

./: CMakeLists.txt
applet/: CMakeLists.txt  configuration.ui  deal.notifyrc  dealapplet.cpp  dealapplet.h  plasma-applet-deal.desktop
engine/: CMakeLists.txt  dealengine.cpp  dealengine.h  plasma-dataengine-deal.desktop
